Update WhatsApp links to use my number and prewritten message

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <input type="time" class="form-control" id="time" required>
       </div>
       <button type="submit" class="btn hero-btn w-100">Book Now</button>
-      <a href="https://wa.me/919999999999?text=I%20want%20to%20book%20an%20appointment%20at%20Premium%20Salon" target="_blank" class="btn btn-whatsapp w-100 mt-2">Book via WhatsApp</a>
+      <a href="https://wa.me/919999999999?text=Hi%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Premium%20Salon." target="_blank" class="btn btn-whatsapp w-100 mt-2">Book via WhatsApp</a>
     </form>
     <div id="bookingSuccess" class="alert alert-success mt-3 d-none text-center">Thank you! Your booking has been received.</div>
   </section>
@@ -433,7 +433,7 @@
           <p><strong>Address:</strong> 123, Main Street, New Delhi, India</p>
           <p><strong>Phone:</strong> <a href="tel:+919999999999">+91 99999 99999</a></p>
           <p><strong>Email:</strong> <a href="mailto:info@premiumsalon.com">info@premiumsalon.com</a></p>
-          <a href="https://wa.me/919999999999" target="_blank" class="btn btn-whatsapp mt-2">WhatsApp Us</a>
+          <a href="https://wa.me/919999999999?text=Hi%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Premium%20Salon." target="_blank" class="btn btn-whatsapp mt-2">WhatsApp Us</a>
         </div>
       </div>
       <div class="col-md-6">
